tests/ui/dollar-crate/dollar-crate-is-keyword.stderr
error: expected identifier, found reserved identifier `$crate`
  --> $DIR/dollar-crate-is-keyword.rs:6:20
   |
LL | / macro_rules! m {
LL | |     () => {
LL | |         // Avoid having more than one `$crate`-named item in the same module,
LL | |         // as even though they error, they still parse as `$crate` and conflict.
LL | |         mod foo {
LL | |             struct $crate {}
   | |                    ^^^^^^ expected identifier, found reserved identifier
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
LL |
LL |   m!();
   |   ---- in this macro invocation

error: expected identifier, found reserved identifier `$crate`
  --> $DIR/dollar-crate-is-keyword.rs:10:23
   |
LL | / macro_rules! m {
LL | |     () => {
LL | |         // Avoid having more than one `$crate`-named item in the same module,
LL | |         // as even though they error, they still parse as `$crate` and conflict.
...  |
LL | |         use $crate as $crate;
   | |                       ^^^^^^ expected identifier, found reserved identifier
LL | |
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
LL |
LL |   m!();
   |   ---- in this macro invocation

error: `$crate` may not be imported
  --> $DIR/dollar-crate-is-keyword.rs:9:9
   |
LL | / macro_rules! m {
LL | |     () => {
LL | |         // Avoid having more than one `$crate`-named item in the same module,
LL | |         // as even though they error, they still parse as `$crate` and conflict.
...  |
LL | |         use $crate;
   | |         ^^^^^^^^^^^
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
LL |
LL |   m!();
   |   ---- in this macro invocation

error: `$crate` may not be imported
  --> $DIR/dollar-crate-is-keyword.rs:10:9
   |
LL | / macro_rules! m {
LL | |     () => {
LL | |         // Avoid having more than one `$crate`-named item in the same module,
LL | |         // as even though they error, they still parse as `$crate` and conflict.
...  |
LL | |         use $crate as $crate;
   | |         ^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
LL |
LL |   m!();
   |   ---- in this macro invocation

error: aborting due to 4 previous errors

